# Replit-Creates

./: README.md
day01/: .replit  404.htm  README.md  app.py  lNDEX.htm  replit.nix
day01/static/stylez/: epic.css
day02/: Cargo.toml  README.md  index.html
day02/src/: main.rs  noise_fn.rs
day03/: .replit  Cargo.toml  README.md  app.vue  books.ts  nuxt.config.ts  original.txt  package-lock.json  package.json  replit.nix  tailwind.config.js  windi.config.ts
day03/components/: Answer.vue  BookPreview.vue  Question.vue
day03/pages/: index.vue  library.vue
day03/pages/book/: [id].vue
day03/src/: main.rs  program.rs
day04/: .replit  Cargo.toml  README.md  hello_world.emo  replit.nix  simple.emo  test.emo
day04/src/: lex.rs  main.rs  runner.rs  speak_map.rs  statement.rs
day05/: README.md  app.vue  nuxt.config.ts  package-lock.json
day05/assets/css/: main.css
day05/components/: repl.vue
day05/server/api/: random_repl.ts
day07/: README.md  main.py
