[package]
name = "day02"
version = "1.0.0"
edition = "2021"

[dependencies]
noise = "0.7.0"

[dependencies.macroquad]
version = "0.3.23"
default-features = false

# Fixes error when excluding audio on WASM
[target.'cfg(target_arch = "wasm32")'.dependencies.macroquad]
version = "0.3.23"
default-features = true

# Optimize dependencies, since they don't change.
[profile.dev.package.'*']
opt-level = 3

[profile.release]
strip = true
lto = true
panic = "abort"
